--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Updated: October 8, 2025 - Force deployment -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -176,14 +177,14 @@
             <div class="section">
                 <h2>What is Randomness?</h2>
                 <div class="definition-box">
-                    <p><strong>Randomness</strong> refers to the lack of pattern or predictability in events. A random process is one where outcomes occur according to probabilistic rules rather than deterministic patterns. In mathematics and statistics, randomness is formalized through probability theory, allowing us to analyze and understand uncertain phenomena.</p>
+                    <p>Randomness refers to the lack of pattern or predictability in events. A random process is one where outcomes occur according to probabilistic rules rather than deterministic patterns. In mathematics and statistics, randomness is formalized through probability theory, allowing us to analyze and understand uncertain phenomena.</p>
                 </div>
                 <p>While individual random events may be unpredictable, collections of random events often exhibit statistical regularity. This paradox—that randomness can produce patterns—is fundamental to probability theory and underlies much of modern science, from quantum mechanics to machine learning.</p>
             </div>
 
             <div class="section">
                 <h2>Understanding Stochastic Processes</h2>
-                <p>A <strong>stochastic process</strong> is a mathematical object that describes the evolution of a system over time where randomness plays a role. More formally, it is a collection of random variables indexed by time (or another parameter).</p>
+                <p>A stochastic process is a mathematical object that describes the evolution of a system over time where randomness plays a role. More formally, it is a collection of random variables indexed by time (or another parameter).</p>
                 
                 <div class="math-formula">
                     {X(t) : t ∈ T}
@@ -252,7 +253,7 @@
             </div>
 
             <div class="definition-box">
-                <h2>Why Study Stochastic Processes?</h2>
+                <h3>Why Study Stochastic Processes?</h3>
                 <p>Understanding randomness and stochastic processes is essential in our increasingly data-driven world. They provide:</p>
                 <ul style="padding-left: 20px; margin-top: 10px;">
                     <li>Mathematical frameworks for analyzing uncertainty</li>
